# home-work-WEB-1

./: Dockerfile  LICENSE  Main_menu.py  Notes.py  Pipfile  Python_core_Team_3.py  address_book.csv  logger.py  requirements.txt
WEB/WEB-10-1/: pyproject.toml
WEB/WEB-10-1/portal/: config.ini
WEB/WEB-10-1/portal/app_portal/: forms.py  models.py  views.py
WEB/WEB-10-1/portal/app_portal/migrations/: 0001_initial.py  0002_alter_author_bio_alter_author_born_location_and_more.py
WEB/WEB-10-1/portal/app_portal/templates/app_portal/: author_details.html  base.html
WEB/WEB-10-1/portal/portal/: settings.py  urls.py
WEB/WEB-10-1/portal/users/: views.py
WEB/WEB-10-1/portal/users/templates/users/: login.html  signup.html
WEB/WEB-11/: main.py  pyproject.toml
WEB/WEB-11/migrations/versions/: 008a55f1c87f_initial.py
WEB/WEB-11/src/: shemas.py
WEB/WEB-11/src/database/: db.py  models.py
WEB/WEB-11/src/repository/: contacts.py
WEB/WEB-11/src/routes/: contacts.py
WEB/WEB-12/: main.py  pyproject.toml
WEB/WEB-12/src/: shemas.py
WEB/WEB-12/src/database/: models.py
WEB/WEB-12/src/repository/: users.py
WEB/WEB-12/src/routes/: auth.py  contacts.py
WEB/WEB-12/src/services/: auth.py
WEB/WEB-13/1 FastAPI/: pyproject.toml
WEB/WEB-13/1 FastAPI/migration/: env.py
WEB/WEB-13/1 FastAPI/src/database/: db.py
WEB/WEB-13/1 FastAPI/src/repository/: contacts.py  users.py
WEB/WEB-13/1 FastAPI/src/routes/: auth.py  avatar.py  contacts.py
WEB/WEB-13/1 FastAPI/src/services/: auth.py  email.py
WEB/WEB-13/2 Django/: MongoDB_to_Postgres.py  pyproject.toml
WEB/WEB-13/2 Django/app_portal/: urls.py
WEB/WEB-13/2 Django/app_portal/templates/app_portal/: author.html  index.html  quote.html  quote_item.html  tag.html
WEB/WEB-13/2 Django/portal/: settings.py
WEB/WEB-13/2 Django/users/: forms.py  views.py
WEB/WEB-13/2 Django/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
WEB/WEB-14/: main.py  pyproject.toml
WEB/WEB-14/docs/source/: conf.py  index.rst
WEB/WEB-14/migration/versions/: 35f9f5bbc012_initial.py  74a055aaa4a0_initial.py
WEB/WEB-14/src/: shemas.py
WEB/WEB-14/src/database/: db.py  models.py
WEB/WEB-14/src/repository/: contacts.py  users.py
WEB/WEB-14/src/routes/: auth.py  avatar.py  contacts.py
WEB/WEB-14/src/services/: auth.py  email.py
WEB/WEB-14/tests/: test_repository_contacts.py  test_repository_users.py
WEB/WEB-3/: factorize.py  sort.py
WEB/WEB-4/: client_socket.py  server.py  server_socket.py
WEB/WEB-4/storage/: data.json
WEB/WEB-5/: kurs.py
WEB/WEB-6/: CREATE-TABLE.sql  home_work.sqlite  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py
WEB/WEB-7/: alembic.ini  config_db.ini  my_select.py  seed.py
WEB/WEB-7/database/: db.py
WEB/WEB-7/migration/: env.py
WEB/WEB-7/migration/versions/: 5ebb95f010f9_init.py
WEB/WEB-8/: config.ini
WEB/WEB-8/RabbitMQ/: consumer.py  models.py  producer.py
WEB/WEB-8/database/: connect.py  finder.py  models.py  seed.py
WEB/WEB-9/: authors.json  main.py  pyproject.toml
data_log/: application.logs
