[tool.poetry]
name = "1 fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libgravatar = "^1.0.4"
psycopg2 = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.8"}
fastapi = "^0.95.2"
alembic = "^1.11.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.8"
redis = "^4.5.5"
fastapi-limiter = "^0.1.5"
bcrypt = "^4.0.1"
cloudinary = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
